# wip-db

./: .gitignore  .test_log.json  AGENTS.md  Cargo.toml  backbone_sqlite3_bind_parameter_count.json  backbone_sqlite3_blob_bytes.json  backbone_sqlite3_cancel_auto_extension.json  backbone_sqlite3_data_count.json  backbone_sqlite3_db_release_memory.json  backbone_sqlite3_declare_vtab.json  backbone_sqlite3_drop_modules.json  backbone_sqlite3_extended_result_codes.json  backbone_sqlite3_get_autocommit.json  backbone_sqlite3_last_insert_rowid.json  backbone_sqlite3_libversion.json  backbone_sqlite3_libversion_number.json  backbone_sqlite3_release_memory.json  backbone_sqlite3_reset_auto_extension.json  backbone_sqlite3_set_last_insert_rowid.json  backbone_sqlite3_soft_heap_limit.json  backbone_sqlite3_stmt_busy.json  backbone_sqlite3_stmt_isexplain.json  backbone_sqlite3_stmt_readonly.json  backbone_sqlite3_stmt_scanstatus_reset.json  backbone_sqlite3_stricmp.json  backbone_sqlite3_system_errno.json  backbone_sqlite3_threadsafe.json  backbone_sqlite3_txn_state.json  backbone_sqlite3_vtab_on_conflict.json  build_shell.sh  create_libsqlite3_so.sh  defines.txt  run_tests.sh  sqlite3.exports  sqlite3_symbols.txt  test.sh  testfixture_swap_optimized.sh
data/: excluded_functions.txt
src/: lib.rs
src/rust_bindings/: DEPENDENCIES.md  aggregate_count.rs  auto_extension.rs  autovacuum_pages.rs  backup_finish.rs  bind_blob.rs  bind_parameter_count.rs  bind_parameter_index.rs  blob_bytes.rs  blob_close.rs  blob_open.rs  blob_read.rs  (+116 more)
testing/: TESTING_SCRIPTS.md  test_logger.py
(+2 files in other folders)
