[package]
name = "rust-sqlite"
version = "0.1.0"
edition = "2024"

[lib]
name = "tungsten_db"
crate-type = ["staticlib"]

[build-dependencies]
cc = "1"

[dependencies]
libc = "0.2.182"
once_cell = "1.21.3"
parking_lot = "0.12.5"
serde = { version = "1.0.228",  features = ["derive"] }
serde_json = "1.0.149"
snafu = "0.8"


[profile.release]
panic = "abort"
debug = false
opt-level = 3
strip = "none"

[profile.dev]
panic = "abort"
debug = true
opt-level = 0
strip = "none"


